--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.11.2",
+    "@nestjs-modules/mailer": "~1.10.3",
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bull": "^4.12.2",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.1.13",
